--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   </style>
 </head>
 <body>
-  <img src="stupidimage.png" alt="Photo">
+  <img src="images/stupidimage.png" alt="Photo">
 </body>
 </html>
