--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   </style>
 </head>
 <body>
-  <img src="images/stupidimage.png" alt="Photo">
+  <img src="refs/heads/main/images/stupidimage.PNG" alt="Photo">
 </body>
 </html>
