--- a/index.html
+++ b/index.html
@@ -2,23 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Photo Page</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: black;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    img {
-      max-width: 100%;
-      max-height: 100%;
-      object-fit: contain;
-    }
-  </style>
+  <title>Lapidus</title>
 </head>
 <body>
   Hello I Am Boruch Mendel
